objects/zoom_app__Zoom_Webinar__c.object
<CustomObject>
    <description>present a Webinar on Zoom Side</description>
    <fields>
        <fullName>zoom_app__Actual_End_Time__c</fullName>
        <description>The actual end time of this Webinar</description>
        <inlineHelpText>The actual end time of this Webinar</inlineHelpText>
        <label>Actual End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Actual_Start_Time__c</fullName>
        <description>The actual start time of this Webinar</description>
        <inlineHelpText>The actual start time of this Webinar</inlineHelpText>
        <label>Actual Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Add_Registrants_As_Campaign_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Registrants As Campaign Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Agenda__c</fullName>
        <label>Agenda</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Create_Campaign_For_Each_Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only &apos;Marketing User&apos; can create Campaign, please check it on your user profile</inlineHelpText>
        <label>Create Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Create_New_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create New Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Creation_Status__c</fullName>
        <label>Creation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Duration__c</fullName>
        <label>Duration in Minutes</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Google_Calendar_Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Google Calendar Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Join_Url__c</fullName>
        <label>Join Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Number_of_Participants__c</fullName>
        <label>Actual Number of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Password__c</fullName>
        <inlineHelpText>it will be encrypted after the record saved</inlineHelpText>
        <label>Passcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Register_Url__c</fullName>
        <label>Register Url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Setting_Allow_Multiple_Devices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Multiple Devices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Setting_Approval_Type__c</fullName>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatically Approval</fullName>
                </value>
                <value>
                    <fullName>Manually Approval</fullName>
                </value>
                <value>
                    <fullName>No Registration Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zoom_app__Setting_Close_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Registration After Event Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Setting_Host_Video_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Host Video On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Setting_Panelists_Video_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Panelists Video On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Setting_Practice_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Start_Url__c</fullName>
        <label>Start Url</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planed</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zoom_app__Topic__c</fullName>
        <label>Topic</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__UUId_Unique__c</fullName>
        <externalId>true</externalId>
        <label>UUId Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zoom_app__UUId__c</fullName>
        <externalId>true</externalId>
        <label>UUId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Webinar_Id__c</fullName>
        <description>The Id of Webinar On Zoom Side</description>
        <label>Webinar Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Zoom Webinar</label>
    <listViews>
        <fullName>zoom_app__All</fullName>
        <columns>NAME</columns>
        <columns>zoom_app__Topic__c</columns>
        <columns>zoom_app__Webinar_Id__c</columns>
        <columns>zoom_app__Start_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Zoom-Webinar-{0000}</displayFormat>
        <label>Zoom Webinar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Webinars</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>